update index, css, typingScript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     <title>JunResume</title>
     <link rel = "stylesheet" href="mystyle.css">
 </head>
+<script src="typingScript.js"/>
 <body>
-    <
+    <nav>
+        <ul>
+            <!--
+                Home - 이름, 간단한 기술 스택, 자기소개
+                Project - 실무 프로젝트
+                About me - 나에 대하여
+                Contatct - 이래도 나를 원한다면 연락줘
+            -->
+            <li><a href="#section1"Home</a>Home</a></li>
+            <li><a href="#section2"Home</a>Project</a></li>
+            <li><a href="#section3"Home</a>About me</a></li>
+            <li><a href="#section4"Home</a>Contatct</a></li>
+
+        </ul>
+    </nav>
+
+    <div id = "section1">
+    <h1>This is Home Section</h1>
+        <div class="container">
+            <p>
+                <span class="typed-text"></span>
+                <span class="cursor">&nbsp;</span>
+            </p>
+        </div>
+        <div>
+
+
+        </div>
+    </div>
+    <div id = "section2">
+    <h1>This is Project Section</h1>
+    </div>
+    <div id = "section3">
+    <h1>This is About me Section</h1>
+    </div>
+    <div id = "section4">
+    <h1>This is Contatct Section</h1>
+    </div>
 </body>
 </html>
