--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JunResume</title>
     <link rel = "stylesheet" href="mystyle.css">
 </head>
-<script src="typingScript.js"/>
+<script src="typingScript.js"></script>
 <body>
     <nav>
         <ul>
