--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
         </ul>
     </nav>
 
-    <div id = "section1">
-        <div class="container">
-            <p> <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
-          </div>
+    <section id = "section1">
         <div>
-
+            <div class="img-container"> 
+                <img src="HomeImage.jpg">
+            </div>
+            <div class="container">
+                <p> <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+            </div>
         </div>
-    </div>
+    </section>
     <div id = "section2">
     <h1>This is Project Section</h1>
     </div>
